force-app/main/default/objects/Nimbus__mdt/Nimbus__mdt.object-meta.xml
<CustomObject>
    <label>Nimbus Field</label>
    <pluralLabel>Nimbus Fields</pluralLabel>
</CustomObject>