force-app/main/default/objects/Nimbus__mdt/fields/Nimbus_Field_Param_Name__c.field-meta.xml
<CustomField>
    <fullName>Nimbus_Field_Param_Name__c</fullName>
    <label>Nimbus Field Param Name</label>
    <type>TextArea</type>
</CustomField>