force-app/main/default/objects/Nimbus__mdt/fields/SF_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Field_API_Name__c</fullName>
    <label>SF Field API Name</label>
    <type>TextArea</type>
</CustomField>